--- a/style.css
+++ b/style.css
@@ -74,8 +74,7 @@ button:hover {
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+[class$="title"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +84,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +97,18 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
-  width: 318px;
-}
-
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -123,51 +118,47 @@ li {
   align-items: center;
 }
 
-li>* {
+.list__item>* {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+.list__item>[type="checkbox"] {
   margin: 0 10px;
 }
 
-li>label {
+.task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
-  width: 226px;
-}
-
-button.delete img {
+.delete *{
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete *:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.complited__list .item__task {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list__item [type=text] {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.editMode [type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.editMode .item__task {
   display: none;
 }
